--- a/internship/Templates/common.html
+++ b/internship/Templates/common.html
@@ -72,7 +72,7 @@
                                         <li><a href="#"><i class="fa fa-lock"></i>Change Password</a></li>
                                     {% else %}
 									    <li><a href="#"><i class="fa fa-lock"></i>Login</a></li>
-                                        <li><a href=""><i class="fa fa-lock"></i>Signup</a></li>
+                                        <li><a href="#"><i class="fa fa-lock"></i>Signup</a></li>
                                     {% endif %}
 								</ul>
 							</div>
@@ -457,12 +457,7 @@
 
 
 
-
-
-
-
-    {% block content %}  {% endblock %}
-
+        {% block content %}    {% endblock %}
 
 
 
