complete django project

--- a/internship/Templates/account/password_reset.html
+++ b/internship/Templates/account/password_reset.html
@@ -28,7 +28,7 @@
                             {% endif %}
                                 <p>Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it.</p>
 
-                            <form id="password_reset" method="POST" action="{% url 'account_reset_password' %}" class="password_reset" data-validate-email-url="{% url 'validate_user_password_reset' %}"> {% csrf_token %}
+                            <form id="password_reset" method="POST" action="{% url 'account_reset_password' %}" class="password_reset" > {% csrf_token %}
                                 <p class="checkout-coupon top-down log a-an">
                                     <label class="l-contact">
                                         Email
