--- a/internship/Templates/account/signup.html
+++ b/internship/Templates/account/signup.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <div class="con-text">
-                            <h2 class="page-title">Login</h2>
+                            <h2 class="page-title">Signup</h2>
                             <p><a href="#">Home</a> | Login</p>
                         </div>
                     </div>
@@ -107,10 +107,10 @@
 														<div class="quick-thumb">
 															<div class="nav nav-tabs">
 																<ul>
-																	<li><a data-toggle="tab" href="#sin-pro-1"> <img src="img/quick-view/10.jpg" alt="quick view" /> </a></li>
-																	<li><a data-toggle="tab" href="#sin-pro-2"> <img src="img/quick-view/10.jpg" alt="quick view" /> </a></li>
-																	<li><a data-toggle="tab" href="#sin-pro-3"> <img src="img/quick-view/10.jpg" alt="quick view" /> </a></li>
-																	<li><a data-toggle="tab" href="#sin-pro-4"> <img src="img/quick-view/10.jpg" alt="quick view" /> </a></li>
+																	<li><a data-toggle="tab" href="#sin-pro-1"> <img src="{% static 'images/quick-view/10.jpg' %}" alt="quick view" /> </a></li>
+																	<li><a data-toggle="tab" href="#sin-pro-2"> <img src="{% static 'images/quick-view/10.jpg' %}" alt="quick view" /> </a></li>
+																	<li><a data-toggle="tab" href="#sin-pro-3"> <img src="{% static 'images/quick-view/10.jpg' %}" alt="quick view" /> </a></li>
+																	<li><a data-toggle="tab" href="#sin-pro-4"> <img src="{% static 'images/quick-view/10.jpg' %}" alt="quick view" /> </a></li>
 																</ul>
 															</div>
 														</div>
@@ -214,16 +214,16 @@
 													<div class="quick-image">
 														<div class="single-quick-image tab-content text-center">
 															<div class="tab-pane  fade in active" id="sin-pro-5">
-																<img src="img/quick-view/10.jpg" alt="" />
+																<img src="{% static 'images/quick-view/10.jpg' %}" alt="" />
 															</div>
 															<div class="tab-pane fade in" id="sin-pro-6">
-																<img src="img/quick-view/10.jpg" alt="" />
+																<img src="{% static 'images/quick-view/10.jpg' %}" alt="" />
 															</div>
 															<div class="tab-pane fade in" id="sin-pro-7">
-																<img src="img/quick-view/10.jpg" alt="" />
+																<img src="{% static 'images/quick-view/10.jpg' %}" alt="" />
 															</div>
 															<div class="tab-pane fade in" id="sin-pro-8">
-																<img src="img/quick-view/10.jpg" alt="" />
+																<img src="{% static 'images/quick-view/10.jpg' %}" alt="" />
 															</div>
 														</div>
 														<div class="quick-thumb">
@@ -352,27 +352,27 @@
 								</div>
 								<div class="col-xs-12">
 									<div class="single-brand">
-										<a href="#"><img src="img/brand/4.png" alt="" /></a>
+										<a href="#"><img src="{% static 'images/brand/4.png' %}" alt="" /></a>
 									</div>
 								</div>
 								<div class="col-xs-12">
 									<div class="single-brand">
-										<a href="#"><img src="img/brand/5.png" alt="" /></a>
+										<a href="#"><img src="{% static 'images/brand/5.png' %}" alt="" /></a>
 									</div>
 								</div>
 								<div class="col-xs-12">
 									<div class="single-brand">
-										<a href="#"><img src="img/brand/6.png" alt="" /></a>
+										<a href="#"><img src="{% static 'images/brand/6.png' %}" alt="" /></a>
 									</div>
 								</div>
 								<div class="col-xs-12">
 									<div class="single-brand">
-										<a href="#"><img src="img/brand/1.png" alt="" /></a>
+										<a href="#"><img src="{% static 'images/brand/1.png' %}" alt="" /></a>
 									</div>
 								</div>
 								<div class="col-xs-12">
 									<div class="single-brand">
-										<a href="#"><img src="img/brand/3.png" alt="" /></a>
+										<a href="#"><img src="{% static 'images/brand/3.png' %}" alt="" /></a>
 									</div>
 								</div>
 							</div>
